{
    "name": "Input",
    "maps": [
        {
            "name": "Player",
            "id": "5981716d-2cf7-420c-9fca-e33e451f3449",
            "actions": [
                {
                    "name": "MoveX",
                    "type": "Value",
                    "id": "de672f26-3c80-4990-a9d6-7e362e4130e5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveY",
                    "type": "Value",
                    "id": "0579bf09-e268-465d-8b4b-53a8e76fb86b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "78a768cd-4170-4833-bee0-8a5874f94215",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rewind",
                    "type": "Button",
                    "id": "a4d7cd75-bb94-43e4-b648-3d1149bf5091",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Hit",
                    "type": "Button",
                    "id": "9d0e5a84-d3c4-4aa9-adc8-a175040cdff6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HitDirection",
                    "type": "Value",
                    "id": "50635cd8-0110-4585-b4fe-f02f459b6198",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4c96ba13-1461-4ce0-8cd3-5f56a29e4e36",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65a627f1-628b-44d6-a355-e956b918f620",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7c26e22-cb50-4e75-a8e8-891e9924d6f7",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rewind",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6683e28-10ae-46ae-9072-126e5ffac8e0",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e5839ba-2278-4e3c-bcbd-fc02e457b1c4",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca595981-9aeb-47a7-af81-b3896d7848f0",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HitDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}